--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,13 @@
         font-family: Arial, sans-serif;
         margin: 50px;
       }
+      @media screen and (min-width: 480px) {
+  body {
+    background-color: lightgreen;
+  }
+}
       .form-container {
-        max-width: 500px;
+        width: 40vw;
         margin: auto;
         padding: 20px;
         border: 1px solid #ccc;
