--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,9 @@
         font-family: Arial, sans-serif;
         margin: 50px;
       }
-      @media screen and (min-width: 480px) {
-  body {
-    background-color: lightgreen;
+      @media screen and (max-width: 550px) {
+  .form-container{
+    width: 95vw;
   }
 }
       .form-container {
