--- a/templates/index.html
+++ b/templates/index.html
@@ -11,19 +11,21 @@
 
       body {
         font-family: Arial, sans-serif;
-        margin: 50px;
       }
       @media screen and (max-width: 550px) {
   .form-container{
-    width: 95vw;
+    width: 80vw !important;
   }
 }
       .form-container {
         width: 40vw;
-        margin: auto;
         padding: 20px;
         border: 1px solid #ccc;
         border-radius: 10px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
       .form-container input {
         width: 100%;
